--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,11 +9,6 @@
     width: 100%;
 }
 
-body{
-    font-size: 14px;
-}
-
-
 /* header */
 #topo{
     width: 100%;
@@ -67,7 +62,7 @@ nav{
     height: 0;
     position: absolute;
     background-color: crimson;
-    top: 70px;
+    top: 80px;
     left: 0;
     transition: 0.5s;
     overflow: hidden; 
@@ -75,7 +70,7 @@ nav{
 
 .menu li ul li{
     display: none;
-    width: 170px;
+    width: 200px;
     transition: 0.5s;
 }
 
@@ -91,19 +86,24 @@ nav{
 
 /* main */
 #conteudo{
-    min-height: 700px;
     flex-direction: column;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 2vh;
+    margin: 2% 0 2% 0;
 }
 
 #conteudo p, ol, h2, img{
+    font-size: 1.3vw;
     padding: 1% 3%;
 }
 
 #conteudo h1{
     text-align: center;
     padding: 2% 5%
+}
+
+#conteudo h2{
+    
 }
 
 #conteudo ul.desc{
@@ -119,6 +119,108 @@ nav{
     width: 30%;
 }
 
+.lemon{
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+    height: 81px;
+}
+
+.lemon img{
+    width: 80px;
+    height: 80px;
+}
+
+.lemon img:hover{
+    cursor: pointer;
+}
+
+audio{
+    border-radius: 50%;
+    border: 2px solid black;
+}
+
+video{
+    align-self: center;
+    width: 50%;
+    height: auto;
+}
+/* formulario */
+form {
+    width:30%;
+    margin: 0 0 5% 10%;
+    padding: 5px;
+}
+
+form fieldset{
+    padding: 20px;
+    margin-bottom: 10px;
+    background-color: #f1f1f1;
+}
+
+form input{
+    height: 20px;
+    width: 90%;
+}
+
+form label{
+    float: left;
+}
+
+form legend{
+    font-size: 1.3em;
+    font-weight: bold;
+}
+
+form fieldset label, legend{
+    font-size: 1.4vw;
+    margin: 0 0 2% 1.3vw;
+}
+
+form fieldset label{
+    padding: 0 5px 0 5px;
+}
+
+form textarea{
+    resize:none;
+    width: 90%;
+}
+
+form select{
+    width: 96%;
+}
+
+form input, select, textarea{
+    padding: 5px 0 5px 15px;
+    margin-bottom: 20px;
+    border-radius: 15px;
+    border: 1.5px black solid;
+}
+
+.required::after{
+    content: " *";
+    color: red;
+}
+
+.box-buttons{
+    text-align: right;
+    padding: 1em;
+    background-color: #f1f1f1;
+    border: 1.9px solid rgb(106, 105, 105);
+}
+
+form button{
+    padding: 0.7vw 1.2vw;
+    border-radius: 15px;
+    background-color: black;
+    color: #ffffff;
+    border: none;
+    font-size: 1.1vw;
+    margin: 0 1% 0 1%;
+}
+
 /* footer */
 
 #rodape{
@@ -129,7 +231,7 @@ nav{
     display: block;
     padding-top: 2%;
     height: auto;
-    background-color: darkblue;
+    background-color: #404040;
     color: #fff;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 1.3em;
@@ -140,3 +242,12 @@ nav{
     padding: 5px 5px;
 }
 
+/* aux javascript */
+.invisivel{
+    display: none !important;
+}
+
+.yellow{
+    background-color: yellow;
+    color: yellow;
+}
