--- a/CSS/style.css
+++ b/CSS/style.css
@@ -102,10 +102,6 @@ nav{
     padding: 2% 5%
 }
 
-#conteudo h2{
-    
-}
-
 #conteudo ul.desc{
     margin-left: 7%;
     text-decoration: none;
@@ -131,15 +127,31 @@ nav{
 .lemon img{
     width: 80px;
     height: 80px;
+    z-index: 4;
 }
 
 .lemon img:hover{
     cursor: pointer;
 }
 
+.lemon-container{
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(#e1e114, #FAFA33);
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    left: 0;
+}
+
 audio{
     border-radius: 50%;
     border: 2px solid black;
+    /**/
+    position: fixed;
+    top: 5%;
+    left: 5%;
+    z-index: 4;
 }
 
 video{
@@ -147,7 +159,9 @@ video{
     width: 50%;
     height: auto;
 }
+
 /* formulario */
+
 form {
     width:30%;
     margin: 0 0 5% 10%;
@@ -244,10 +258,6 @@ form button{
 
 /* aux javascript */
 .invisivel{
-    display: none !important;
-}
-
-.yellow{
-    background-color: yellow;
-    color: yellow;
+    display: none;
+    z-index: -1;
 }
