--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,6 +9,27 @@
     width: 100%;
 }
 
+/* barra acessibilidade*/
+
+.acessibilidade{
+    background-color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+}
+
+.atalhos, .links_acess{
+    list-style: none;
+    display: inline-flex;
+    padding: 5px;
+}
+
+.atalhos li, .links_acess li{
+    padding-left: 5px;
+}
+
+.links_acess{
+    margin-left: 50%;
+}
 /* header */
 #topo{
     width: 100%;
