--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,6 +29,7 @@
 
 .links_acess{
     margin-left: 50%;
+    
 }
 /* header */
 #topo{
@@ -70,7 +71,8 @@ nav{
     color: #ffffff;
     text-decoration: none;
     font-weight: bold;
-    font-family: Helvetica, Arial ;
+    font-family: Helvetica, Arial;
+    font-size: 1.1vw;
 
 }
 
@@ -105,12 +107,25 @@ nav{
     transition: 0.5s;
 }
 
+/* ocultar botao de menu */
+label[for="bt_menu"], #bt_menu{
+    z-index: 2;
+    display: none;
+}
+
+
+
 /* main */
 #conteudo{
     flex-direction: column;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 2vh;
     margin: 2% 0 2% 0;
+    overflow: hidden;
+}
+
+section{
+    padding: 2% 2%;
 }
 
 #conteudo p, ol, h2, img{
@@ -120,7 +135,8 @@ nav{
 
 #conteudo h1{
     text-align: center;
-    padding: 2% 5%
+    padding: 2% 5%;
+    font-size: 3.4vw
 }
 
 #conteudo ul.desc{
@@ -134,45 +150,6 @@ nav{
 
 #conteudo img.small{
     width: 30%;
-}
-
-.lemon{
-    width: 30%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    align-self: center;
-    height: 81px;
-}
-
-.lemon img{
-    width: 80px;
-    height: 80px;
-    z-index: 4;
-}
-
-.lemon img:hover{
-    cursor: pointer;
-}
-
-.lemon-container{
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(#e1e114, #FAFA33);
-    position: fixed;
-    z-index: 3;
-    top: 0;
-    left: 0;
-}
-
-audio{
-    border-radius: 50%;
-    border: 2px solid black;
-    /**/
-    position: fixed;
-    top: 5%;
-    left: 5%;
-    z-index: 4;
 }
 
 video{
@@ -275,10 +252,69 @@ form button{
 
 #rodape p{
     padding: 5px 5px;
+    font-size: 1.1vw;
 }
 
 /* aux javascript */
 .invisivel{
     display: none;
-    z-index: -1;
+}
+
+
+/* media query barra de acessibilidade */
+@media screen and (max-width: 1680px){
+
+    .links_acess{
+        margin-left: 45%;
+    }
+}
+
+@media screen and (max-width: 1345px){
+
+    .links_acess{
+        margin-left: 35%;
+    }
+}
+
+@media screen and (max-width: 850px){
+
+    .atalhos{
+        display: none;
+    }
+
+    .links_acess{
+        margin: auto;
+    }
+}
+
+/* media querys menu responsivo */
+
+@media screen and (max-width: 740px){
+
+    nav{
+        justify-content: left;
+    }
+
+    .menu{
+
+        display:none;
+    }
+
+    label[for="bt_menu"]{
+        display: block;
+        margin: 2%;
+    }
+
+    #bt_menu:checked ~ .menu{
+        display:block;
+       
+    }
+
+    .menu li{
+        padding: 10% 1px;
+    }
+
+    .menu li ul{
+        position: relative;
+    }
 }
