--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,8 +72,7 @@ nav{
     text-decoration: none;
     font-weight: bold;
     font-family: Helvetica, Arial;
-    font-size: 1.1vw;
-
+    font-size: 1vw;
 }
 
 .menu li a:hover{
@@ -85,7 +84,7 @@ nav{
     height: 0;
     position: absolute;
     background-color: crimson;
-    top: 80px;
+    top: 90px;
     left: 0;
     transition: 0.5s;
     overflow: hidden; 
@@ -93,12 +92,12 @@ nav{
 
 .menu li ul li{
     display: none;
-    width: 200px;
+    width: 220px;
     transition: 0.5s;
 }
 
 .menu li:hover ul{
-    height: 110px;
+    height: 130px;
     transition: 0.5s;
 }
 
@@ -125,7 +124,7 @@ label[for="bt_menu"], #bt_menu{
 }
 
 section{
-    padding: 2% 2%;
+    padding: 2% 10%;
 }
 
 #conteudo p, ol, h2, img{
@@ -133,10 +132,45 @@ section{
     padding: 1% 3%;
 }
 
+.breadcrumb{
+    width: 80%;
+    background-color: #ddd;
+    border-radius: 15px;
+    padding: 1%;
+    margin: 0 10%;
+    list-style: none;
+}
+
+.breadcrumb ul{
+    margin: 0;
+}
+
+.breadcrumb li{
+    display: inline;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.8em;
+    color: #000;
+}
+
+.breadcrumb li a{
+    color: #555;
+}
+
+.breadcrumb li a:hover{
+    color: black;
+    transition: 0.2s;
+}
+
+.breadcrumb li+li::before{
+    content: "/\00a0";
+    padding: 6px;
+    color: #000;
+}
+
 #conteudo h1{
     text-align: center;
     padding: 2% 5%;
-    font-size: 3.4vw
+    font-size: 2.6vw
 }
 
 #conteudo ul.desc{
@@ -161,12 +195,13 @@ video{
 /* formulario */
 
 form {
-    width:30%;
+    width:50%;
     margin: 0 0 5% 10%;
     padding: 5px;
 }
 
 form fieldset{
+    width: 70%;
     padding: 20px;
     margin-bottom: 10px;
     background-color: #f1f1f1;
@@ -186,8 +221,8 @@ form legend{
     font-weight: bold;
 }
 
-form fieldset label, legend{
-    font-size: 1.4vw;
+form fieldset label, legend, input, select, textarea{
+    font-size: 1vw;
     margin: 0 0 2% 1.3vw;
 }
 
@@ -217,6 +252,7 @@ form input, select, textarea{
 }
 
 .box-buttons{
+    width: 70%;
     text-align: right;
     padding: 1em;
     background-color: #f1f1f1;
@@ -271,8 +307,27 @@ form button{
 
 @media screen and (max-width: 1345px){
 
+    
     .links_acess{
         margin-left: 35%;
+    }
+
+    /*menu*/
+
+    .menu li ul{
+        height: 0;
+        position: absolute;
+        background-color: crimson;
+        top: 60px;
+        left: 0;
+        transition: 0.5s;
+        overflow: hidden; 
+    }
+    
+    .menu li ul li{
+        display: none;
+        width: 180px;
+        transition: 0.5s;
     }
 }
 
@@ -284,6 +339,55 @@ form button{
 
     .links_acess{
         margin: auto;
+    }
+
+    /*menu*/
+
+    .menu li ul{
+        height: 0;
+        position: absolute;
+        background-color: crimson;
+        top: 50px;
+        left: 0;
+        transition: 0.5s;
+        overflow: hidden; 
+    }
+    
+    .menu li ul li{
+        display: none;
+        width: 150px;
+        transition: 0.5s;
+    }
+
+    .menu li:hover ul{
+        height: 100px;
+        transition: 0.5s;
+    }
+
+    /* conteudo */
+
+    #conteudo p, ol, h2, img{
+        font-size: 1.3vh;
+        padding: 1% 3%;
+    }
+
+    /* form */
+
+    
+    form button{
+        font-size: 1.1vh;
+    }
+
+    form fieldset label, legend, input, select, textarea{
+        font-size: 1.5vh;
+        margin: 0 0 2% 1.3vw;
+    }
+
+    /* rodapé */
+    
+    #rodape p{
+        padding: 5px 5px;
+        font-size: 1.3vh;
     }
 }
 
@@ -307,14 +411,61 @@ form button{
 
     #bt_menu:checked ~ .menu{
         display:block;
+        width: 100%;
        
     }
 
     .menu li{
-        padding: 10% 1px;
+        padding: 10px 1px;
     }
 
     .menu li ul{
-        position: relative;
+        position: static;
     }
+
+    .menu li a{
+        font-size: 1.1vh;
+    }
+
+    .menu li ul li{
+        position: relative;
+        display: block;
+    }
+
+    /* conteudo */
+
+    #conteudo p, ol, h2, img{
+        font-size: 1.3vh;
+        padding: 1% 3%;
+    }
+
+    .imagem{
+        width: 60%;
+        height: auto;
+    }
+
+    video{
+        width: 100%;
+        height: auto;
+        align-self: center;
+    }
+
+    /* form */
+
+    form button{
+        font-size: 1.1vh;
+    }
+
+    form fieldset label, legend, input, select, textarea{
+        font-size: 1.5vh;
+        margin: 0 0 2% 1.3vw;
+    }
+
+    /* rodapé */
+    
+    #rodape p{
+        padding: 5px 5px;
+        font-size: 1.3vh;
+    }
+
 }
